# queqlite

./: .dockerignore  Cargo.toml  Dockerfile  README.md  RELEASING.md
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md  rates-2026-07-12.json  run-recorder-sync-linux.py  run-recorder-transport.py  run-rpc-codec.py  run-rpc-framework.py  run-rpc-tls.py  sql-kv-results-2026-07-19.md
bench/src/: cost.rs  lib.rs  main.rs
bench/support/: fdatasync-as-fsync.c
crates/queqlite/: Cargo.toml
crates/queqlite-archive/: Cargo.toml
crates/queqlite-archive/src/: lib.rs
crates/queqlite-archive/tests/: contracts.rs  gc.rs
crates/queqlite-cli/src/: main.rs
crates/queqlite-core/src/: lib.rs
crates/queqlite-log/: Cargo.toml
crates/queqlite-log/src/: lib.rs
crates/queqlite-log/tests/: contracts.rs  file_store.rs  properties.rs
crates/queqlite-node/: Cargo.toml
crates/queqlite-node/src/: admin.rs  durability.rs  lib.rs
crates/queqlite-node/tests/: admin_http.rs  checkpoint_http.rs  configuration.rs  contracts.rs  durability.rs  e2e.rs  recovery_anchor.rs  service.rs
crates/queqlite-obj-store/: Cargo.toml
crates/queqlite-obj-store/src/: lib.rs
crates/queqlite-obj-store/tests/: contracts.rs
crates/queqlite-quepaxa/examples/: local_three_node.rs
crates/queqlite-quepaxa/src/: lib.rs
crates/queqlite-quepaxa/tests/: genuine_quepaxa.rs
crates/queqlite-sqlite/: Cargo.toml
crates/queqlite-sqlite/src/: lib.rs
crates/queqlite-sqlite/tests/: contracts.rs
crates/queqlite/src/: lib.rs
crates/queqlite/tests/: embedded.rs
crates/rhiza/: Cargo.toml
crates/rhiza-archive/: Cargo.toml
crates/rhiza-archive/src/: lib.rs
crates/rhiza-archive/tests/: contracts.rs  gc.rs
crates/rhiza-cli/: Cargo.toml
crates/rhiza-cli/src/: main.rs
crates/rhiza-client/: Cargo.toml
crates/rhiza-client/src/: lib.rs
crates/rhiza-core/: Cargo.toml  README.md
crates/rhiza-core/src/: lib.rs
crates/rhiza-core/tests/: contracts.rs
crates/rhiza-graph/: Cargo.toml  build.rs
crates/rhiza-graph/src/: control.rs  lgfx.rs  lib.rs  tracking_file_system.rs
crates/rhiza-graph/tests/: batching.rs  codec.rs  lgfx_contracts.rs  lgfx_state_machine.rs  state_machine.rs
crates/rhiza-kv/: Cargo.toml
crates/rhiza-kv/src/: lib.rs
crates/rhiza-kv/tests/: batching.rs  codec.rs  state_machine.rs
crates/rhiza-log/: Cargo.toml
crates/rhiza-log/src/: lib.rs
crates/rhiza-log/tests/: contracts.rs  file_store.rs  properties.rs
crates/rhiza-node/: Cargo.toml
crates/rhiza-node/src/: admin.rs  durability.rs  graph.rs  kv.rs  lib.rs  recorder_tcp.rs
crates/rhiza-node/src/recorder_tcp/: postcard_rpc.rs
crates/rhiza-node/tests/: admin_http.rs  checkpoint_http.rs  configuration.rs  contracts.rs  durability.rs  e2e.rs  execution_profile_features.rs  graph_runtime.rs  kv_runtime.rs  recorder_http_auth.rs  recorder_postcard_rpc.rs  recorder_tcp.rs  recovery_anchor.rs  service.rs
crates/rhiza-obj-store/: Cargo.toml
crates/rhiza-obj-store/tests/: contracts.rs
crates/rhiza-quepaxa/: Cargo.toml  README.md
crates/rhiza-quepaxa/examples/: local_three_node.rs  recorder_sync_bench.rs
crates/rhiza-quepaxa/src/: lib.rs
crates/rhiza-quepaxa/tests/: adversarial_agreement.rs  dynamic_membership.rs  genuine_quepaxa.rs  recorder_durability_fast_path.rs
crates/rhiza-sql/: Cargo.toml
crates/rhiza-sql/src/: control.rs  lib.rs  qwal.rs  qwal_vfs.rs
crates/rhiza-sql/tests/: contracts.rs  qwal_contracts.rs
crates/rhiza-testkit/: Cargo.toml
crates/rhiza-testkit/src/: lib.rs
crates/rhiza-testkit/tests/: contracts.rs
crates/rhiza/src/: lib.rs
crates/rhiza/tests/: embedded.rs  feature_matrix.rs
deploy/k8s/: rhiza-admin-job.yaml  rhiza-checkpoint-job.yaml  rhiza-cluster.yaml  rustfs-e2e.yaml
docs/: failover-throughput-optimization-2026-07-12.md  ha-sql-benchmark-2026-07-12.md  hiqlite-benchmark-artifact-2026-07-12.md  hiqlite-sql-message-review.md  mab-leader-hedge-tuning.md  node-rpc-equal-tls-benchmark-2026-07-15.md  node-rpc-stack-benchmark-2026-07-15.md  node-rpc-stack-research-2026-07-15.md  node-transport-research-2026-07-15.md  performance-benchmark-2026-07-17.md  performance-optimization-2026-07-17.md  protobuf-postcard-benchmark-2026-07-17.md  quepaxa-paper-conformance-2026-07-12.md  recorder-rpc-adoption-gate-2026-07-15.md  sqlite-wal-replication-design.md  three-peer-emptydir-recovery-2026-07-19.md
docs/benchmarks/recorder-sync-linux-20260717/: raw.jsonl  summary.json
examples/basic-app-server/: Cargo.toml
examples/basic-app-server/src/: main.rs
examples/basic-app-server/tests/: process_chaos.rs
experiments/rust-sqlite-conformance/: Cargo.toml  README.md  build.rs
experiments/rust-sqlite-conformance/corpus/: v1.sql
experiments/rust-sqlite-conformance/results/: conformance-summary.json
experiments/rust-sqlite-conformance/src/: lib.rs  main.rs
experiments/rust-sqlite-conformance/tests/: conformance.rs
experiments/turso-size-perf/: .gitignore  Cargo.toml  README.md  run.py
experiments/turso-size-perf/results/: cargo-tree-rusqlite-features.txt  cargo-tree-rusqlite.txt  cargo-tree-turso-features.txt  cargo-tree-turso.txt  summary.json
experiments/turso-size-perf/src/: common.rs
experiments/turso-size-perf/tests/: test_run.py
scripts/: bench-vind.sh  check-bench-vind-static.sh  check-deploy.sh  check-e2e-recovery-matrix-static.sh  check-quepaxa-package.sh  check-workspace-packages.sh  e2e-hiqlite-recovery.sh  e2e-vind-rustfs.sh  gc-k8s.sh  k8s-admin-job.sh  k8s-object-job.sh  k8s-stop-state.sh  render-k8s-config.sh  replace-k8s-config.sh  wait-k8s-statefulset-ready.sh
scripts/test-fixtures/: config-4-predecessor.json  config-4-wrong-successor.json  kubectl-preflight-failure.sh  kubectl-transient.sh
