[workspace]
members = [
    "crates/queqlite-archive",
    "crates/queqlite-core",
    "crates/queqlite-log",
    "crates/queqlite-obj-store",
    "crates/queqlite-quepaxa",
    "crates/queqlite-sqlite",
    "crates/queqlite-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/mrchypark/queqlite"

[workspace.dependencies]
bytes = "1"
futures = "0.3"
object_store = { version = "0.14.0", features = ["aws", "azure", "gcp"] }
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1.52.3", features = ["fs", "macros", "net", "rt-multi-thread"] }
