[package]
name = "queqlite-bench"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "queqlite-bench"

# This package is intentionally standalone so adding the harness does not change
# the main workspace manifest or its dependency graph.
[workspace]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
