[package]
name = "queqlite-archive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
queqlite-core = { path = "../queqlite-core" }
queqlite-log = { path = "../queqlite-log" }
queqlite-obj-store = { path = "../queqlite-obj-store" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
