[package]
name = "queqlite-obj-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
