[package]
name = "queqlite-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fallible-streaming-iterator = "0.1"
queqlite-core = { path = "../queqlite-core" }
rusqlite = { workspace = true, features = ["backup", "session"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
