[package]
name = "queqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
queqlite-node = { path = "../queqlite-node" }
queqlite-quepaxa = { path = "../queqlite-quepaxa" }
queqlite-sqlite = { path = "../queqlite-sqlite" }
tokio.workspace = true

[dev-dependencies]
queqlite-archive = { path = "../queqlite-archive" }
queqlite-obj-store = { path = "../queqlite-obj-store" }
tempfile.workspace = true
