[package]
name = "rhiza-archive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhiza-core = { path = "../rhiza-core" }
rhiza-log = { path = "../rhiza-log" }
rhiza-obj-store = { path = "../rhiza-obj-store" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
