[package]
name = "rhiza-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for running and administering rhiza"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("graph", "kv"))'] }

[features]
default = ["sql"]
sql = ["dep:rhiza-sql", "rhiza-client/sql", "rhiza-node/sql"]
recorder-postcard-rpc = ["rhiza-node/recorder-postcard-rpc"]

[dependencies]
axum.workspace = true
rhiza-client = { version = "0.1.0", path = "../rhiza-client", default-features = false }
rhiza-archive = { version = "0.1.0", path = "../rhiza-archive" }
rhiza-core = { version = "0.1.0", path = "../rhiza-core" }
rhiza-log = { version = "0.1.0", path = "../rhiza-log" }
rhiza-node = { version = "0.1.0", path = "../rhiza-node" }
rhiza-obj-store = { version = "0.1.0", path = "../rhiza-obj-store" }
rhiza-quepaxa = { version = "0.1.0", path = "../rhiza-quepaxa" }
rhiza-sql = { version = "0.1.0", path = "../rhiza-sql", optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal", "time"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "rhiza"
path = "src/main.rs"
