[package]
name = "rhiza-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for interacting with rhiza nodes"

[features]
default = ["sql"]
sql = ["rhiza-node/sql", "dep:rhiza-sql"]
graph = ["rhiza-node/graph"]
kv = ["rhiza-node/kv"]

[dependencies]
reqwest.workspace = true
rhiza-core = { version = "0.1.0", path = "../rhiza-core" }
rhiza-node = { version = "0.1.0", path = "../rhiza-node", default-features = false }
rhiza-sql = { version = "0.1.0", path = "../rhiza-sql", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
