[package]
name = "rhiza-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LadybugDB materialized state machine for rhiza graph"

[dependencies]
lbug = { git = "https://github.com/mrchypark/ladybug-rust", branch = "feature/custom-filesystem" }
rhiza-core = { path = "../rhiza-core" }
tempfile.workspace = true

[dev-dependencies]
proptest = "1"
