[package]
name = "rhiza-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LadybugDB materialized state machine for rhiza graph"

[features]
default = []
vfs = ["lbug/vfs"]

[dependencies]
lbug = { git = "https://github.com/mrchypark/ladybug-rust", branch = "feature/custom-filesystem" }
postcard.workspace = true
rhiza-core = { path = "../rhiza-core" }
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest = "1"
