[package]
name = "rhiza-log"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Durable log primitives for rhiza"

[dependencies]
rhiza-core = { version = "0.1.0", path = "../rhiza-core" }

[dev-dependencies]
proptest = "1"
tempfile.workspace = true
