[package]
name = "rhiza-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
graph = ["dep:rhiza-graph"]
kv = ["dep:rhiza-kv"]

[dependencies]
rhiza-archive = { path = "../rhiza-archive" }
rhiza-core = { path = "../rhiza-core" }
rhiza-graph = { path = "../rhiza-graph", optional = true }
rhiza-kv = { path = "../rhiza-kv", optional = true }
rhiza-log = { path = "../rhiza-log" }
rhiza-obj-store = { path = "../rhiza-obj-store" }
rhiza-quepaxa = { path = "../rhiza-quepaxa" }
rhiza-sql = { path = "../rhiza-sql" }
axum.workspace = true
postcard.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
