[package]
name = "rhiza-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sql"]
sql = ["dep:rhiza-sql"]
graph = ["dep:rhiza-graph"]
kv = ["dep:rhiza-kv"]
recorder-postcard-rpc = ["dep:postcard-rpc", "dep:tracing"]

[dependencies]
rhiza-archive = { path = "../rhiza-archive" }
rhiza-core = { path = "../rhiza-core" }
rhiza-graph = { path = "../rhiza-graph", optional = true }
rhiza-kv = { path = "../rhiza-kv", optional = true }
rhiza-log = { path = "../rhiza-log" }
rhiza-obj-store = { path = "../rhiza-obj-store" }
rhiza-quepaxa = { path = "../rhiza-quepaxa" }
rhiza-sql = { path = "../rhiza-sql", optional = true }
axum.workspace = true
postcard.workspace = true
postcard-rpc = { workspace = true, optional = true }
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.14"
tempfile.workspace = true
tower.workspace = true
