[package]
name = "rhiza-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Network node runtime for rhiza"

[features]
default = ["sql"]
sql = ["dep:rhiza-sql"]
graph = ["dep:rhiza-graph"]
kv = ["dep:rhiza-kv"]
recorder-postcard-rpc = ["dep:postcard-rpc", "dep:tracing"]

[dependencies]
rhiza-archive = { version = "0.1.0", path = "../rhiza-archive" }
rhiza-core = { version = "0.1.0", path = "../rhiza-core" }
rhiza-graph = { version = "0.1.0", path = "../rhiza-graph", optional = true }
rhiza-kv = { version = "0.1.0", path = "../rhiza-kv", optional = true }
rhiza-log = { version = "0.1.0", path = "../rhiza-log" }
rhiza-obj-store = { version = "0.1.0", path = "../rhiza-obj-store" }
rhiza-quepaxa = { version = "0.1.0", path = "../rhiza-quepaxa" }
rhiza-sql = { version = "0.1.0", path = "../rhiza-sql", optional = true }
axum.workspace = true
postcard.workspace = true
postcard-rpc = { workspace = true, optional = true }
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.14"
tempfile.workspace = true
tower.workspace = true
