[package]
name = "rhiza"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhiza-core = { path = "../rhiza-core" }
rhiza-node = { path = "../rhiza-node" }
rhiza-quepaxa = { path = "../rhiza-quepaxa" }
rhiza-sql = { path = "../rhiza-sql" }
tokio.workspace = true

[dev-dependencies]
rhiza-archive = { path = "../rhiza-archive" }
rhiza-obj-store = { path = "../rhiza-obj-store" }
tempfile.workspace = true
