[package]
name = "rust-sqlite-conformance"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[workspace]

[dependencies]
fallible-streaming-iterator = "=0.1.9"
graphitesql = "=0.1.3"
rusqlite = { version = "=0.40.1", features = ["backup", "bundled", "column_decltype", "hooks", "session"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
